Removed deprecated envars scheduled for removal with 5.0.0
Fixes: #8025

--- a/services/_includes/adoc/sharing_configvars.adoc
+++ b/services/_includes/adoc/sharing_configvars.adoc
@@ -1,10 +1,10 @@
 // set the attribute to true or leave empty, true without any quotes.
 
-:show-deprecation: true
+:show-deprecation: false
 
 ifeval::[{show-deprecation} == true]
 
-[#deprecation-note-2024-01-09-09-10-04]
+[#deprecation-note-2024-01-09-10-30-31]
 [caption=]
 .Deprecation notes for the sharing service
 [width="100%",cols="~,~,~,~",options="header"]
@@ -13,11 +13,6 @@ ifeval::[{show-deprecation} == true]
 | Deprecation Version
 | Removal Version
 | Deprecation Replacement
-
-| SHARING_EVENTS_TLS_ROOT_CA_CERT changing name for consistency
-| 4.0.3
-| 5.0.0
-| SHARING_EVENTS_TLS_ROOT_CA_CERTIFICATE
 |===
 
 endif::[]
@@ -234,8 +229,7 @@ Whether to verify the server TLS certificates.
 
 a|`OCIS_EVENTS_TLS_ROOT_CA_CERTIFICATE` +
 `SHARING_EVENTS_TLS_ROOT_CA_CERTIFICATE` +
-`SHARING_EVENTS_TLS_ROOT_CA_CERT` +
-xref:deprecation-note-2024-01-09-09-10-04[Deprecation Note]
+
 a| [subs=-attributes]
 ++string ++
 a| [subs=-attributes]
