--- a/services/_includes/adoc/graph_configvars.adoc
+++ b/services/_includes/adoc/graph_configvars.adoc
@@ -1,10 +1,10 @@
 // set the attribute to true or leave empty, true without any quotes.
 
-:show-deprecation: true
+:show-deprecation: false
 
 ifeval::[{show-deprecation} == true]
 
-[#deprecation-note-2024-01-09-09-10-04]
+[#deprecation-note-2024-01-09-10-30-31]
 [caption=]
 .Deprecation notes for the graph service
 [width="100%",cols="~,~,~,~",options="header"]
@@ -13,11 +13,6 @@ ifeval::[{show-deprecation} == true]
 | Deprecation Version
 | Removal Version
 | Deprecation Replacement
-
-| LDAP_BIND_PASSWORD changing name for consistency
-| 4.0.2
-| 5.0.0
-| OCIS_LDAP_BIND_PASSWORD
 |===
 
 endif::[]
@@ -525,9 +520,8 @@ a| [subs=-attributes]
 LDAP DN to use for simple bind authentication with the target LDAP server.
 
 a|`OCIS_LDAP_BIND_PASSWORD` +
-`LDAP_BIND_PASSWORD` +
 `GRAPH_LDAP_BIND_PASSWORD` +
-xref:deprecation-note-2024-01-09-09-10-04[Deprecation Note]
+
 a| [subs=-attributes]
 ++string ++
 a| [subs=-attributes]
